# pisserror

./: .cargo-rdme.toml  .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yaml
macros/: Cargo.toml  README.md
macros/src/: derive.rs  display.rs  error.rs  from.rs  lib.rs  util.rs
macros/src/parse_enum/: attr.rs  field.rs  mod.rs  variant.rs
macros/src/parser/: attr.rs  field.rs  mod.rs  variant.rs
macros/src/traits/: display.rs  error.rs  from.rs  mod.rs
macros/src/util/: mod.rs  variant.rs
macros/tests/: basic.rs  blank.rs  comments.rs  from.rs  generics.rs  nonexhaustive.rs  struct_like_variant.rs  variant_field_in_error.rs
src/: _doctests.rs  lib.rs
tests/: works.rs
