[package]
name = "pisserror"
description = "A golden rip-off of thiserror"
authors = ["Barrett Ray <contact@barretts.club>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/onkoe/pisserror"

[dependencies.macros]
path = "./macros"

[workspace]
members = ["macros"]
