[package]
name = "pisserror"
description = "A golden rip-off of thiserror"
authors = ["Barrett Ray <contact@barretts.club>"]
version = "0.2.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/onkoe/pisserror"

[dependencies.pisserror_macros]
path = "macros/"
version = "0.2.1"

[workspace]
members = ["macros"]
