[package]
name = "pisserror_macros"
version = "0.2.1"
edition = "2021"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.86", default-features = false }
quote = { version = "1.0.36", default-features = false }
syn = { version = "2.0.69", features = ["full", "extra-traits"] }
